--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
-      - run: rm -f app/*
+      - run: rm -rf app/*
       - run: mv -f server/* .
       - uses: actions/setup-node@v3
         with:
