--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
-      - run: rm -f server/*
+      - run: rm -rf server/*
       - run: mv -f app/* .
       - uses: actions/setup-node@v3
         with:
