--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -8,13 +8,15 @@ on:
     paths-ignore:
       - "app/**"
 
+defaults:
+  run:
+    working-directory: server
+
 jobs:
-  frontend:
+  backend:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
-      - run: rm -rf app/*
-      - run: mv -f server/* .
       - uses: actions/setup-node@v3
         with:
           node-version: "18"
