--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -8,13 +8,15 @@ on:
     paths-ignore:
       - "server/**"
 
+defaults:
+  run:
+    working-directory: app
+
 jobs:
   frontend:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
-      - run: rm -rf server/*
-      - run: mv -f app/* .
       - uses: actions/setup-node@v3
         with:
           node-version: "18"
