--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.13.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.3",
