--- a/server/package.json
+++ b/server/package.json
@@ -30,8 +30,10 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/ws": "^8.5.9",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2"
   }
 }
